Part3/Exercise_3.02/manifests/shared_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pinglog-namespace
  name: shared-ingress
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong-service
            port:
              number: 3033
      - path: /
        pathType: Prefix
        backend:
          service:
            name: log-output-service
            port:
              number: 3011
